--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
     <h2>
         Hello Daisy - The Original Boss!
     </h2>
+    <div>
+        <img src ="Daisy.JPG" height="200">
+    </div>
 </html>
