--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-    <h2>
-        Hello Daisy - The Original Boss!
-    </h2>
+    <h1>
+        Hello Daisy Graham - The Original Boss!
+    </h1>
     <div>
         <img src ="Daisy.JPG" height="200">
     </div>
